# read_bmecat

./: Cargo.toml  rust-toolchain.toml
foxprodbs/: article.CDX  article.dbf  article_feature.CDX  article_feature.dbf  article_feature_group.CDX  article_feature_group.dbf  article_feature_value.CDX  article_feature_value.dbf  article_order_details.CDX  article_order_details.dbf  article_price.CDX  article_price.dbf  article_price_details.CDX  article_price_details.dbf  article_price_territory.CDX  article_price_territory.dbf  article_variant.CDX  article_variant.dbf  article_variants.CDX  article_variants.dbf  mime.CDX  mime.dbf
src/: bmecat.rs  main.rs
