[package]
name = "read_bmecat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
roxmltree = "0.18.0"
encoding_rs = "0.8.33"
encoding_rs_io = "0.1.7"
env_logger = "0.10.0"
odbc = "0.17.0"
anyhow = "1.0.40"
unicode-segmentation = "1.10.1"
